[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litemigrate"
version = "0.0.2"
authors = [{ name = "Dima Charnyshou", email = "imryche13@gmail.com" }]
description = "Extremely simple SQLite migrations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/imryche/litemigrate"
Issues = "https://github.com/imryche/litemigrate/issues"

[project.scripts]
migrate = "litemigrate.migrate:migrate"
